:memo:  update readme

--- a/example/res/index.html
+++ b/example/res/index.html
@@ -176,11 +176,11 @@
                 //     log(res)
                 // });
                 
-                ewj.get_balance({
-                    address:'0x3dc10b66f79b4f9e605b3778e4a70a4af2a3395b'
-                },function(res){
-                    log(res); // {gwei: "14000000", wei: "14000000000000000", ether: "0.014"}
-                });
+                // ewj.get_balance({
+                //     address:'0x3dc10b66f79b4f9e605b3778e4a70a4af2a3395b'
+                // },function(res){
+                //     log(res); // {gwei: "14000000", wei: "14000000000000000", ether: "0.014"}
+                // });
 
 
             } ,2000);
