:bookmark: add transfer function

--- a/example/res/index.html
+++ b/example/res/index.html
@@ -182,6 +182,10 @@
                 //     log(res); // {gwei: "14000000", wei: "14000000000000000", ether: "0.014"}
                 // });
 
+                ewj.get_contract('0xa4d17ab1ee0efdd23edc2869e7ba96b89eecf9ab',function(res){
+                    log(res);
+                });
+
 
             } ,2000);
             // 0.20 stable-version
